--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,11 @@
 plugins {
     // Apply the application plugin to add support for building a CLI application in Java.
     id 'application'
+    id 'java'
+    id 'jacoco'
+    id "io.freefair.lombok" version "8.6"
+    id 'org.springframework.boot' version '3.2.5'
+    id "io.spring.dependency-management" version "1.1.4"
 }
 
 repositories {
