--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,8 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
     // Use JUnit Jupiter for testing.
     testImplementation libs.junit.jupiter
 
