--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,12 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'com.mysql:mysql-connector-j:8.3.0'
+
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.testcontainers:testcontainers:1.19.7'
+    testImplementation 'org.testcontainers:mysql:1.19.7'
+    testImplementation "org.testcontainers:junit-jupiter:1.19.7"
 
     // Use JUnit Jupiter for testing.
     testImplementation libs.junit.jupiter
